add spring-cloud-cli-v17